--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
                   <div class="col-md-6">
                       <div class="form-group">
                           <label for="firstName">First name</label>
-                          <input type="text" class="form-control" id="firstName" placeholder="First name">
+                          <input type="text" class="form-control" id="firstName" >
                       </div>
                   </div>
                   <div class="col-md-6">
                       <div class="form-group">
                           <label for="lastName">Last name</label>
-                          <input type="text" class="form-control" id="lastName" placeholder="Last name">
+                          <input type="text" class="form-control" id="lastName" >
                       </div>
                   </div>
               </div>
@@ -406,13 +406,13 @@
                   <div class="col-md-6">
                       <div class="form-group">
                           <label for="email">Email</label>
-                          <input type="email" class="form-control" id="email" placeholder="Email">
+                          <input type="email" class="form-control" id="email" >
                       </div>
                   </div>
                   <div class="col-md-6">
                       <div class="form-group">
                           <label for="phone">Phone number</label>
-                          <input type="text" class="form-control" id="phone" placeholder="Phone number">
+                          <input type="text" class="form-control" id="phone" >
                       </div>
                   </div>
               </div>
