--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         </div>
       </div>
     </footer>
-    <section class="py-2 px-3 Nolor">
+    <section class="py-2 px-3 Nolor container-xxl">
       <hr />
       <div class="d-flex justify-content-between my-5">
         <h6 class="text-start">Made with 💖 by Airdokan</h6>
