--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               </div>
               <div class="form-group">
                   <label for="message">Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Type your message..."></textarea>
+                  <textarea class="form-control add-comment-input" id="message" rows="5" placeholder="Type your message..."></textarea>
               </div>
               <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="terms">
